Fix overflow issue of vertically aligned body children

--- a/002_results-summary-component/style.css
+++ b/002_results-summary-component/style.css
@@ -9,7 +9,11 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
+
+  height: 100vh;
+
+  margin: 0;
 }
 
 /* Main styling */
